--- a/charts/sscs-tribunals-api/Chart.yaml
+++ b/charts/sscs-tribunals-api/Chart.yaml
@@ -21,6 +21,10 @@ dependencies:
     version: 0.0.46
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
     condition: sscs-evidence-share.enabled
+  - name: sscs-tya-notif
+    version: 0.0.42
+    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    condition: sscs-tya-notif.enabled
   - name: sscs-ccd-callback-orchestrator
     version: 0.0.28
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
