--- a/charts/sscs-tribunals-api/values.yaml
+++ b/charts/sscs-tribunals-api/values.yaml
@@ -81,6 +81,8 @@ elastic:
   enabled: false
 sscs-evidence-share:
   enabled: false
+sscs-tya-notif:
+  enabled: false
 sscs-ccd-callback-orchestrator:
   enabled: false
 sscs-tribunals-frontend:
