--- a/lib/applicationinsights.json
+++ b/lib/applicationinsights.json
@@ -1,6 +1,6 @@
 {
   "connectionString": "${file:/mnt/secrets/sscs/app-insights-connection-string}",
   "role": {
-    "name": "HMCTS Tribunals Case Api"
+    "name": "TribunalsCaseApi"
   }
 }
