--- a/charts/sscs-tribunals-api/Chart.yaml
+++ b/charts/sscs-tribunals-api/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: sscs-tribunals-api
 home: https://github.com/hmcts/sscs-tribunals-case-api
-version: 0.0.100
+version: 0.0.101
 description: SSCS Tribunals Case API
 maintainers:
   - name: HMCTS SSCS Team
@@ -21,6 +21,10 @@ dependencies:
     version: 0.0.46
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
     condition: sscs-evidence-share.enabled
+  - name: sscs-tya-notif
+    version: 0.0.42
+    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    condition: sscs-tya-notif.enabled
   - name: sscs-ccd-callback-orchestrator
     version: 0.0.28
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
@@ -56,6 +60,6 @@ dependencies:
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
     condition: hmc-cft-hearing-service.enabled
   - name: servicebus
-    version: 0.4.0
+    version: 1.0.2
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
     condition: servicebus.enabled
