Setting up the user regional-centre-admin@fake.hmcts.net

--- a/.env
+++ b/.env
@@ -76,6 +76,9 @@ export CASEWORKER_PASSWORD=password
 export CTSC_ADMINISTRATOR_USERNAME=ctsc-administrator@hmcts.net
 export CTSC_ADMINISTRATOR_PASSWORD=password
 
+export REGIONAL_CENTRE_ADMIN_USERNAME=regional-centre-admin@fake.hmcts.net
+export REGIONAL_CENTRE_ADMIN_PASSWORD=password
+
 export WA_CASEOFFICER_USERNAME=wa-caseofficer-user@fake.hmcts.net
 export WA_CASEOFFICER_PASSWORD=System01
 
