s2s key from secret fetch for admin-web added (#3211)
* s2s key from secret fetch for admin-web added

* changed ccd-admin-web image on preview

* sadfwe

* Create judicial-api-judges-search.json

fcvgb

--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -214,7 +214,7 @@ ccd:
     nameOverride: ${SERVICE_NAME}-es
     clusterName: "es"
     replicas: 1
-  
+    
   logstash:
     image: hmctspublic.azurecr.io/imported/logstash/logstash
     imageTag: "7.16.1"
@@ -390,19 +390,16 @@ ccd:
                 timeout => 60
             }
         }
+        
   ccd-admin-web:
     nodejs:
       image: hmctspublic.azurecr.io/ccd/admin-web:latest
-      ingressHost: ${SERVICE_NAME}-ccd-admin-web
-      disableKeyVaults: true
+      ingressHost: admin-web-${SERVICE_FQDN}
       environment:
+        IDAM_ADMIN_WEB_SERVICE_KEY: ${ADMIN_S2S_KEY}
         IDAM_OAUTH2_AW_CLIENT_SECRET: ${ADMIN_WEB_IDAM_SECRET}
-        IDAM_BASE_URL: https://idam-api.aat.platform.hmcts.net
-        IDAM_OAUTH2_TOKEN_ENDPOINT: https://idam-web-public.aat.platform.hmcts.net/oauth2/token'
-        IDAM_S2S_URL: http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
-    idam-pr:
-      releaseNameOverride: ${SERVICE_NAME}-ccd-admin-idam-pr
-      enabled: true
+      keyVaults: [ ]
+
 
   ccd-user-profile-api:
     java:
