SSCS-10602 adds post hearings b feature flag to preview yaml

--- a/charts/sscs-tribunals-api/values.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.preview.template.yaml
@@ -16,3 +16,4 @@ java:
     CASE_ACCESS_MANAGEMENT_FEATURE: true
     SCHEDULE_LISTING_FEATURE: true
     POST_HEARINGS_FEATURE: true
+    POST_HEARINGS_B_FEATURE: true
