--- a/lib/applicationinsights.json
+++ b/lib/applicationinsights.json
@@ -1,6 +1,6 @@
 {
-  "connectionString": "${file:/mnt/secrets/draft-store/app-insights-connection-string}",
+  "connectionString": "${file:/mnt/secrets/sscs/app-insights-connection-string}",
   "role": {
-    "name": "HMCTS Draft Store"
+    "name": "TribunalsCaseApi"
   }
 }
