--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,8 @@ gitProperties {
 group = 'uk.gov.hmcts.reform'
 version = '1.0.0'
 
-sourceCompatibility = JavaVersion.VERSION_17
-targetCompatibility = JavaVersion.VERSION_17
+//sourceCompatibility = JavaVersion.VERSION_17
+//targetCompatibility = JavaVersion.VERSION_17
 
 compileJava {
     options.compilerArgs << '-parameters' << '-Xlint:deprecation' << "-Xlint:unchecked"
