SSCS-10526 adds correct English and Welsh templates and chooses which one in the mid handler

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -61,7 +61,6 @@ doc_assembly.url=${DOC_ASSEMBLY_URL:http://localhost:4631}
 doc_assembly.adjourn_case=TB-SCS-GNO-ENG-adjournment-notice.docx
 doc_assembly.postponementrequest=TB-SCS-GNO-ENG-00754.docx
 doc_assembly.posthearingrequest=TB-SCS-GNO-ENG-00754.docx
-doc_assembly.write_statementofreasons=TB-SCS-GNO-ENG-00754.docx
 docmosis.accessKey= ${PDF_SERVICE_ACCESS_KEY:}
 docmosis.convert.endpoint= ${PDF_SERVICE_CONVERT_URL:https://docmosis.aat.platform.hmcts.net/rs/convert}
 docmosis.health.endpoint= ${PDF_SERVICE_HEALTH_URL:https://docmosis.aat.platform.hmcts.net/rs/status}
@@ -70,9 +69,11 @@ docmosis.uri=${DOCMOSIS_SERVICE_BASE_URL:https://docmosis.aat.platform.hmcts.net
 documents.english.DIRECTION_ISSUED=TB-SCS-GNO-ENG-directions-notice.docx
 documents.english.DECISION_ISSUED=TB-SCS-GNO-ENG-draft-decision-notice.docx
 documents.english.ISSUE_FINAL_DECISION=TB-SCS-GNO-ENG-final-decision-notice.docx
+documents.english.WRITE_SOR=TB-SCS-LET-ENG-Statement-Of-Reasons-Outcome.docx
 documents.welsh.DIRECTION_ISSUED=TB-SCS-GNO-ENG-draft-decision-notice.docx
 documents.welsh.DECISION_ISSUED=TB-SCS-GNO-ENG-draft-decision-notice.docx
 documents.welsh.ISSUE_FINAL_DECISION=TB-SCS-GNO-ENG-final-decision-notice.docx
+documents.welsh.WRITE_SOR=TB-SCS-LET-WEL-Statement-Of-Reasons-Outcome.docx
 
 document.bilingual.notice.template=TB-SCS-GNO-WEL-00473.docx
 
