--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -73,6 +73,8 @@ documents.welsh.DIRECTION_ISSUED=TB-SCS-GNO-ENG-draft-decision-notice.docx
 documents.welsh.DECISION_ISSUED=TB-SCS-GNO-ENG-draft-decision-notice.docx
 documents.welsh.ISSUE_FINAL_DECISION=TB-SCS-GNO-ENG-final-decision-notice.docx
 
+document.bilingual.notice.template=TB-SCS-GNO-WEL-00473.docx
+
 evidence.english.template=TB-SCS-GNO-ENG-00012.docx
 evidence.english.hmctsImgVal="[userImage:hmcts.png]"
 evidence.welsh.template=TB-SCS-GNO-WEL-00479.docx
