--- a/.env
+++ b/.env
@@ -88,6 +88,12 @@ export TRIBUNAL_MEMBER_2_PASSWORD=password
 export TRIBUNAL_MEMBER_3_USERNAME=tribunal-member-3@fake.hmcts.net
 export TRIBUNAL_MEMBER_3_PASSWORD=password
 
+export TRIBUNAL_MEMBER_3_USERNAME=appraiser-1@fake.hmcts.net
+export TRIBUNAL_MEMBER_3_PASSWORD=password
+
+export TRIBUNAL_MEMBER_3_USERNAME=appraiser-2@fake.hmcts.net
+export TRIBUNAL_MEMBER_3_PASSWORD=password
+
 export WA_CASEOFFICER_USERNAME=wa-caseofficer-user@fake.hmcts.net
 export WA_CASEOFFICER_PASSWORD=System01
 
