--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -132,6 +132,7 @@ feature.snl.adjournment.enabled: ${ADJOURNMENT_FEATURE:false}
 feature.case-access-management.enabled: ${CASE_ACCESS_MANAGEMENT_FEATURE:false}
 feature.postHearings.enabled: ${POST_HEARINGS_FEATURE:false}
 feature.postHearingsB.enabled: ${POST_HEARINGS_B_FEATURE:false}
+feature.typeahead.enabled: ${TYPEAHEAD_FEATURE:false}
 
 case_document_am.url=${CASE_DOCUMENT_AM_URL:http://localhost:4455}
 
