--- a/src/cftlib/resources/docker/cft-lib-doc-stack.yml
+++ b/src/cftlib/resources/docker/cft-lib-doc-stack.yml
@@ -66,7 +66,7 @@ services:
       - "host.docker.internal:host-gateway"
 
   azure-storage-emulator-azurite:
-    image: arafato/azurite
+    image: mcr.microsoft.com/azure-storage/azurite
     ports:
       - 10000:10000
     environment:
