--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -584,6 +584,8 @@ sscs-tya-notif:
       HOURS_END_TIME: 23
       RUN_DB_MIGRATION_ON_STARTUP: true
       TEST_RECIPIENTS_POSTCODE: "*"
+      POST_HEARINGS_FEATURE: true
+      POST_HEARINGS_B_FEATURE: true
     secrets:
       AMQP_PASSWORD:
         secretRef: sscs-sb-preview
