SSCS-10766 - Rebase, refactor and merge.

--- a/build.gradle
+++ b/build.gradle
@@ -328,7 +328,7 @@ dependencies {
     implementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.0'
     implementation group: 'com.github.hmcts', name: 'cmc-pdf-service-client', version: '7.0.1'
 
-    implementation group: 'com.github.hmcts', name: 'sscs-common', version: '4.26.0'
+    implementation group: 'com.github.hmcts', name: 'sscs-common', version: 'd32572d'
     implementation group: 'com.github.hmcts', name: 'sscs-pdf-email-common', version: '1.8.4'
 
     implementation group: 'com.azure', name: 'azure-core', version: '1.39.0'
@@ -573,20 +573,4 @@ bootWithCCD {
     environment 'JMS_AMQP_CONNECTION_TEMPLATE', 'amqp://%1s?amqp.idleTimeout=%2d'
     environment 'ENABLE_JMS', 'true'
 
-    // logger
-    def fileLogger = [ onOutput: {
-        File logfile = new File('gradle-build.log')
-        logfile << it
-    }
-    ] as org.gradle.api.logging.StandardOutputListener
-
-    logging.addStandardOutputListener(fileLogger)
-
-    gradle.taskGraph.whenReady { taskGraph ->
-        taskGraph.allTasks.each { Task t ->
-            t.doFirst {
-                logging.addStandardOutputListener(fileLogger)
-            }
-        }
-    }
 }
