--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -66,9 +66,11 @@ docmosis.convert.endpoint= ${PDF_SERVICE_CONVERT_URL:https://docmosis.aat.platfo
 docmosis.health.endpoint= ${PDF_SERVICE_HEALTH_URL:https://docmosis.aat.platform.hmcts.net/rs/status}
 docmosis.uri=${DOCMOSIS_SERVICE_BASE_URL:https://docmosis.aat.platform.hmcts.net/rs/render}
 
+documents.english.CORRECTION_GRANTED=TB-SCS-GNO-ENG-corrected-decision-notice.docx
 documents.english.DIRECTION_ISSUED=TB-SCS-GNO-ENG-directions-notice.docx
 documents.english.DECISION_ISSUED=TB-SCS-GNO-ENG-draft-decision-notice.docx
 documents.english.ISSUE_FINAL_DECISION=TB-SCS-GNO-ENG-final-decision-notice.docx
+documents.welsh.CORRECTION_GRANTED=TB-SCS-GNO-ENG-corrected-decision-notice.docx
 documents.welsh.DIRECTION_ISSUED=TB-SCS-GNO-ENG-draft-decision-notice.docx
 documents.welsh.DECISION_ISSUED=TB-SCS-GNO-ENG-draft-decision-notice.docx
 documents.welsh.ISSUE_FINAL_DECISION=TB-SCS-GNO-ENG-final-decision-notice.docx
