--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -783,6 +783,7 @@ camunda-bpm:
     devmemoryRequests: 512Mi
     devcpuLimits: 1
     devmemoryLimits: 1Gi
+    readinessDelay: 90
     environment:
       CAMUNDA_API_AUTH_ENABLED: false
       CAMUNDA_DB_HOST: ${SERVICE_NAME}-postgresql
@@ -798,6 +799,7 @@ wa-task-management-api:
   java:
     releaseNameOverride: ${SERVICE_NAME}-wa-task-management-api
     ingressHost: wa-task-management-api-${SERVICE_FQDN}
+    readinessDelay: 90
     environment:
       CAMUNDA_URL: http://{{ .Release.Name }}-camunda/engine-rest
       ROLE_ASSIGNMENT_URL: http://{{ .Release.Name }}-am-role-assignment-service
@@ -816,6 +818,7 @@ wa-task-monitor:
   java:
     ingressHost: wa-task-monitor-${SERVICE_FQDN}
     releaseNameOverride: ${SERVICE_NAME}-wa-task-monitor
+    readinessDelay: 90
     environment:
       CAMUNDA_URL: http://{{ .Release.Name }}-camunda/engine-rest
       TASK_MANAGEMENT_SERVICE_URL: http://{{ .Release.Name }}-wa-task-management-api
@@ -832,6 +835,7 @@ wa-case-event-handler:
   java:
     ingressHost: wa-case-event-handler-${SERVICE_FQDN}
     releaseNameOverride: ${SERVICE_NAME}-wa-case-event-handler
+    readinessDelay: 90
     environment:
       CAMUNDA_URL: http://{{ .Release.Name }}-camunda/engine-rest
       CCD_URL: http://{{ .Release.Name }}-ccd-data-store-api
@@ -856,6 +860,7 @@ wa-workflow-api:
   java:
     ingressHost: wa-workflow-api-${SERVICE_FQDN}
     releaseNameOverride: ${SERVICE_NAME}-wa-workflow-api
+    readinessDelay: 90
     environment:
       CAMUNDA_URL: http://{{ .Release.Name }}-camunda/engine-rest
       POSTGRES_HOST: "{{ .Release.Name }}-postgresql"
@@ -877,6 +882,7 @@ ccd-message-publisher:
   java:
     ingressHost: ccd-message-publisher-${SERVICE_FQDN}
     releaseNameOverride: ${SERVICE_NAME}-ccd-message-publisher
+    readinessDelay: 90
     environment:
       DATA_STORE_DB_HOST: ${SERVICE_NAME}-postgresql
       DATA_STORE_DB_NAME: data-store
